--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,10 +5,13 @@ repo: upptime-nextify # The name of this repository
 sites:
   - name: Mobitopup
     url: https://napcard.voz.tech
+    maxResponseTime: 5000
+    method: GET
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
+  theme: dark
   name: Upptime
   baseUrl: /upptime-nextify
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
