--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,15 +7,11 @@ sites:
     url: https://napcard.voz.tech
     maxResponseTime: 3000
     method: GET
-  - name: Test Telegram
-    url: https://test.com
-    maxResponseTime: 3000
-    method: GET
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
-  theme: dark
+  theme: night
   name: Upptime
   baseUrl: /upptime-nextify
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
